--- a/01. Introduction-to-Machine-Learning-Materials/Titanic.ipynb
+++ b/01. Introduction-to-Machine-Learning-Materials/Titanic.ipynb
@@ -449,7 +449,7 @@
    "source": [
     "dummies= pd.get_dummies(titanic_features[[\"pclass\", \"sex\", \"embarked\"]])\n",
     "titanic_features = titanic_features.drop(columns = [\"pclass\", \"sex\", \"embarked\"])\n",
-    "titanic_features = pd.merge(titanic_features, dummies, left_index=True, right_index=True)\n"
+    "titanic_features = pd.merge(titanic_features, dummies, left_index=True, right_index=True)"
    ]
   },
   {
