added demos with ensemble algorithms

--- a/03. Model-Training-and-Improvement-Lab/Model Training and Improvement Demos.ipynb
+++ b/03. Model-Training-and-Improvement-Lab/Model Training and Improvement Demos.ipynb
@@ -631,7 +631,9 @@
   {
    "cell_type": "markdown",
    "id": "c5abdaa4-a863-4184-9b2d-1d80bb418060",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Iris"
    ]
