updated few notebooks

--- a/03. Model-Training-and-Improvement-Lab/Model Training and Improvement Lab.ipynb
+++ b/03. Model-Training-and-Improvement-Lab/Model Training and Improvement Lab.ipynb
@@ -790,7 +790,11 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "cell_type": "code",
      "checksum": "440dec2d88ea0f235732de7188bf6418",
@@ -802,7 +806,8 @@
     },
     "pycharm": {
      "name": "#%%\n"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
