--- a/03. Model-Training-and-Improvement-Lab/Model Training and Improvement Demos.ipynb
+++ b/03. Model-Training-and-Improvement-Lab/Model Training and Improvement Demos.ipynb
@@ -41,19 +41,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33185f6e-0c68-4307-b7c9-67af6792fe99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "f21dcabe-a812-4105-84db-7fc38b239cf1",
    "metadata": {},
    "source": [
-    "## Adult\n",
+    "## Income dataset\n",
     "\n",
     "> Prediction task is to determine whether a person makes over 50K a year."
    ]
@@ -63,7 +55,7 @@
    "id": "433b33fa-da84-47aa-b2d5-ee27865cefb5",
    "metadata": {},
    "source": [
-    "### Process the data"
+    "### Clean data"
    ]
   },
   {
@@ -324,7 +316,7 @@
    "id": "9765b265-4318-4b7f-bc93-4702405c2486",
    "metadata": {},
    "source": [
-    "### Model the data"
+    "### Model data"
    ]
   },
   {
@@ -397,11 +389,10 @@
    "cell_type": "markdown",
    "id": "e45d3e22-de6a-41b0-8282-142236feb85e",
    "metadata": {
-    "tags": [],
-    "toc-hr-collapsed": true
+    "tags": []
    },
    "source": [
-    "### Score"
+    "### Score model"
    ]
   },
   {
@@ -571,6 +562,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "89b95f03-ca72-4b02-bc60-023b66f01ae7",
+   "metadata": {},
+   "source": [
+    "### Interpret score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b6503ba-41c6-43c3-8fcf-abc6dc1fd884",
    "metadata": {},
    "source": [
@@ -635,7 +634,7 @@
     "tags": []
    },
    "source": [
-    "## Iris"
+    "## Iris dataset"
    ]
   },
   {
