--- a/Optical Recognition of Handwritten Digits.ipynb
+++ b/Optical Recognition of Handwritten Digits.ipynb
@@ -32,15 +32,9 @@
    "id": "a4606622",
    "metadata": {},
    "source": [
-    "# Tutorial `sklearn`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "63c3285e",
-   "metadata": {},
-   "source": [
-    "## Digits"
+    "# Optical Recognition of Handwritten Digits\n",
+    "\n",
+    "Tutorial from sklearn."
    ]
   },
   {
@@ -327,38 +321,6 @@
     "disp.figure_.suptitle(\"Confusion Matrix\")\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b76ffe9d",
-   "metadata": {},
-   "source": [
-    "## Iris"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "208b0524",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1f9e18a4",
-   "metadata": {},
-   "source": [
-    "## Diabetes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d314ba16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
