--- a/03. Model-Training-and-Improvement-Lab/Cross Validation Demo.ipynb
+++ b/03. Model-Training-and-Improvement-Lab/Cross Validation Demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "e4dfa24d-c8f0-4f26-b1f0-e6659ddbfaa9",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "6681d109-62b1-4159-afdb-407c8918d515",
    "metadata": {},
    "outputs": [],
@@ -20,13 +20,21 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
     "from sklearn.preprocessing import MinMaxScaler, FunctionTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer, make_column_selector\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split, KFold, StratifiedKFold, cross_val_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split, KFold, StratifiedKFold, cross_val_score"
+    "from sklearn.compose import ColumnTransformer, make_column_selector\n",
+    "from sklearn.pipeline import Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5adbb8da-33b6-4e98-880d-387962e6e7c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RANDOM_STATE = 1"
    ]
   },
   {
@@ -59,12 +67,12 @@
    "id": "1df9258a-df5f-472e-bbee-a263afbca7ba",
    "metadata": {},
    "source": [
-    "### Clean data"
+    "### Prepare data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "81925637-969f-4021-a0a8-0fb04da91603",
    "metadata": {},
    "outputs": [],
@@ -83,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "c3f5b8f4-de69-48e6-8a1e-8579f280ba10",
    "metadata": {},
    "outputs": [
@@ -91,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test aand train split shapes:\n",
+      "Test and train split shapes:\n",
       "(3164, 51)\n",
       "(1357, 51)\n",
       "(3164,)\n",
@@ -100,7 +108,7 @@
     }
    ],
    "source": [
-    "print('Test aand train split shapes:')\n",
+    "print('Test and train split shapes:')\n",
     "for a_set in [bank_features_train, bank_features_test, bank_labels_train, bank_labels_test]:\n",
     "    print(a_set.shape)"
    ]
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "3b0ff5e7-f2ff-4aef-954a-65a1665fe7d2",
    "metadata": {},
    "outputs": [],
@@ -125,17 +133,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "fab101e3-84d4-45a2-b2ea-be95a8ea1c4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_fold = StratifiedKFold(n_splits=5)"
+    "stratified_kfold = StratifiedKFold(n_splits=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
+   "id": "3d67158c-2c20-4384-bf65-18cd811af786",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3164, 51)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bank_features_train.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a9a0f65-bc4f-4c18-a9e9-729c49ed64aa",
+   "metadata": {},
+   "source": [
+    "https://scikit-learn.org/stable/modules/cross_validation.html#stratified-k-fold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4bdfe25b-235d-4b33-a383-aad6cc97339d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train set indeces: 617 - 3163\n",
+      "test set indeces: 0 - 635\n",
+      "==============================\n",
+      "train set indeces: 0 - 3163\n",
+      "test set indeces: 617 - 1268\n",
+      "==============================\n",
+      "train set indeces: 0 - 3163\n",
+      "test set indeces: 1222 - 1961\n",
+      "==============================\n",
+      "train set indeces: 0 - 3163\n",
+      "test set indeces: 1891 - 2539\n",
+      "==============================\n",
+      "train set indeces: 0 - 2539\n",
+      "test set indeces: 2509 - 3163\n",
+      "==============================\n"
+     ]
+    }
+   ],
+   "source": [
+    "for train_indeces, test_indeces in stratified_kfold.split(bank_features_train, bank_labels_train):\n",
+    "    print(\n",
+    "        f\"train set indeces: {train_indeces.min()} - {train_indeces.max()}\",\n",
+    "        f\"test set indeces: {test_indeces.min()} - {test_indeces.max()}\",\n",
+    "        \"=\" * 30,\n",
+    "        sep=\"\\n\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "822c3576-7fe0-4838-8e0d-a2caa15102ca",
+   "metadata": {},
+   "source": [
+    "Ще осредни"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "c77b8912-772d-4de9-a781-1c921b27f3d3",
    "metadata": {
     "collapsed": true,
@@ -190,26 +275,54 @@
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  n_iter_i = _check_optimize_result(\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "scores = cross_val_score(\n",
+    "    estimator = LogisticRegression(C=10e6 , max_iter=500),\n",
+    "    scoring=\"accuracy\",\n",
+    "    X = bank_features_train,\n",
+    "    y = bank_labels_train,\n",
+    "    cv=stratified_kfold,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "4d151ccb-cb76-488b-92fb-036c29f84ea5",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.90363349, 0.88151659, 0.89257504, 0.87519747, 0.89240506])"
+       "array([0.88625592, 0.89731438, 0.90363349, 0.90679305, 0.89082278])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cross_val_score(\n",
-    "    estimator = logistic_regression,\n",
-    "    X = bank_features_train,\n",
-    "    y = bank_labels_train,\n",
-    "    cv=k_fold,\n",
-    ")"
+    "scores"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8bc164b-f4bc-422b-b6fa-f3978b7dab9c",
+   "metadata": {},
+   "source": [
+    "5 scores since the num of folds k in kfold cross validation indexes is 5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c642891d-554a-4381-a78f-42acf9c620f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
