--- a/05. Trees and SVMs Lab/Trees and SVMs Lab.ipynb
+++ b/05. Trees and SVMs Lab/Trees and SVMs Lab.ipynb
@@ -605,7 +605,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
+    "collapsed": true,
     "deletable": false,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "nbgrader": {
      "cell_type": "code",
      "checksum": "e19571c5e83d0b7d29d953b9ace63b42",
