--- a/02. Linear and Logistic Regression Lab/RANSAC Houses Demo.ipynb
+++ b/02. Linear and Logistic Regression Lab/RANSAC Houses Demo.ipynb
@@ -716,7 +716,9 @@
   {
    "cell_type": "markdown",
    "id": "48cd6e24-881a-4e2b-91f0-fb0583174a18",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "#### RANSAC\n",
     "\n",
@@ -978,22 +980,6 @@
     "for variable_number in [4,5,6]:\n",
     "    plot_model_for_single_variable(variable_number)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c71277f-7213-4efd-95a4-f7bc793f02e8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33d7184d-9003-4592-9b43-56c434c656d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
