--- a/09. Exam-Preparation-Demos/SongOMatic.ipynb
+++ b/09. Exam-Preparation-Demos/SongOMatic.ipynb
@@ -1527,7 +1527,13 @@
    "cell_type": "code",
    "execution_count": 154,
    "id": "bb299099",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1660,13 +1666,7 @@
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  n_iter_i = _check_optimize_result(\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  n_iter_i = _check_optimize_result(\n",
       "C:\\Users\\Yordan\\anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:763: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
       "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
       "\n",
@@ -1807,7 +1807,9 @@
    "cell_type": "code",
    "execution_count": 163,
    "id": "af439435",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -1855,7 +1857,13 @@
    "cell_type": "code",
    "execution_count": 168,
    "id": "ddc4ffc1",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -2061,7 +2069,13 @@
    "cell_type": "code",
    "execution_count": 177,
    "id": "f17b2398",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -2814,7 +2828,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2828,7 +2842,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
