--- a/05. Trees and SVMs Lab/SVM Demos.ipynb
+++ b/05. Trees and SVMs Lab/SVM Demos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "caef6fa4-091c-4ccf-aaed-bacd23ae9381",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "66094827-e362-4cad-ac6b-7d9096d51d11",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
+   "id": "7e8be85e-483e-418f-82a8-808f7625154b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(26048, 100)\n",
+      "(6513, 100)\n",
+      "(26048,)\n",
+      "(6513,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "income_data = pd.read_csv(\"https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data\", header=None)\n",
+    "income_data.columns = [\n",
+    "    \"age\",\n",
+    "    \"workclass\",\n",
+    "    \"final_weight\",\n",
+    "    \"education\",\n",
+    "    \"education-num\",\n",
+    "    \"marital-status\",\n",
+    "    \"occupation\",\n",
+    "    \"relationship\",\n",
+    "    \"race\",\n",
+    "    \"sex\",\n",
+    "    \"capital_gain\",\n",
+    "    \"capital_loss\",\n",
+    "    \"hours_per_week\",\n",
+    "    \"native_country\",\n",
+    "    \"income_class\",\n",
+    "]\n",
+    "\n",
+    "income_target = income_data.income_class\n",
+    "income_target = income_target.str.strip()\n",
+    "\n",
+    "income_attributes = income_data.drop(columns=\"income_class\")\n",
+    "income_attributes = pd.get_dummies(income_attributes, drop_first=True)\n",
+    "scaler = MinMaxScaler()\n",
+    "income_attributes = scaler.fit_transform(income_attributes)\n",
+    "\n",
+    "income_attributes_train, income_attributes_test, \\\n",
+    "income_target_train, income_target_test, \\\n",
+    "= train_test_split(income_attributes, income_target, train_size=0.8)\n",
+    "\n",
+    "for x in [income_attributes_train, income_attributes_test, income_target_train, income_target_test]:\n",
+    "    print(x.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2ee5e1c3-9963-4cbb-b0da-fff42950edda",
    "metadata": {},
    "outputs": [
@@ -108,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "8590bfa3-9704-43cf-a5f0-89a7f3d09cc1",
    "metadata": {
     "tags": []
@@ -135,7 +188,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "a388af13-c848-413a-a7bb-2e8dd7ca3e4d",
    "metadata": {},
    "outputs": [],
@@ -177,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "f80d6209-d93d-4251-b6b9-15f28589b289",
    "metadata": {},
    "outputs": [
@@ -198,7 +251,7 @@
        "LinearSVC(C=1000000.0, max_iter=10000)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
