updated several projects

--- a/04. Tree-and-Ensemble-Methods/Comparison between Ensemble Algorithms.ipynb
+++ b/04. Tree-and-Ensemble-Methods/Comparison between Ensemble Algorithms.ipynb
@@ -57,7 +57,9 @@
   {
    "cell_type": "markdown",
    "id": "a03ce75d-c529-45d2-b6c0-64e7cbbdd4b2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Adult dataset\n",
     "\n",
