--- a/06 Clustering/Kmeans from First Principles.ipynb
+++ b/06 Clustering/Kmeans from First Principles.ipynb
@@ -152,7 +152,11 @@
    "execution_count": 154,
    "id": "a6d34af6",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -662,7 +666,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
